adding buffered fws boundaries
