# api/controllers/six.js
@@ -14,12 +14,17 @@ function clippedImage(req, res) {
     let climate = req.swagger.params['climate'].value;
     let style = req.swagger.params['style'].value;
     let fileFormat = req.swagger.params['fileFormat'].value;
+    let useBufferedBoundary = req.swagger.params['useBufferedBoundary'].value;
 
     let boundaryTable = "";
     let boundary = "";
     let boundaryColumn = "";
     if(fwsBoundary) {
-        boundaryTable = "fws_boundaries";
+        if(useBufferedBoundary) {
+            boundaryTable = "fws_boundaries_buff30km";
+        } else {
+            boundaryTable = "fws_boundaries";
+        }
         boundary = fwsBoundary;
         boundaryColumn = "orgname";
     } else if(stateBoundary) {
@@ -31,11 +36,11 @@ function clippedImage(req, res) {
     }
 
     if (style) {
-        return sixController.getClippedSixImage(boundary, boundaryTable, boundaryColumn, moment.utc(date), plant, phenophase, climate, fileFormat)
+        return sixController.getClippedSixImage(boundary, boundaryTable, boundaryColumn, moment.utc(date), plant, phenophase, climate, fileFormat, useBufferedBoundry)
             .then((areaStatsResponse) => res.status(200).send(areaStatsResponse))
             .catch((error) => res.status(500).json({"message": error.message}));
     } else {
-        return sixController.getClippedSixRaster(boundary, boundaryTable, boundaryColumn, moment.utc(date), plant, phenophase, climate, fileFormat)
+        return sixController.getClippedSixRaster(boundary, boundaryTable, boundaryColumn, moment.utc(date), plant, phenophase, climate, fileFormat, useBufferedBoundry)
             .then((areaStatsResponse) => res.status(200).send(areaStatsResponse))
             .catch((error) => res.status(500).json({"message": error.message}));
     }
@@ -47,13 +52,18 @@ function boundary(req, res) {
     let fwsBoundary = req.swagger.params['fwsBoundary'].value;
     let stateBoundary = req.swagger.params['stateBoundary'].value;
     let format = req.swagger.params['format'].value;
+    let useBufferedBoundary = req.swagger.params['useBufferedBoundary'].value;
 
     let boundaryTable = "";
     let boundary = "";
     let boundaryColumn = "";
     let layer = "";
     if(fwsBoundary) {
-        boundaryTable = "fws_boundaries";
+        if(useBufferedBoundary) {
+            boundaryTable = "fws_boundaries_buff30km";
+        } else {
+            boundaryTable = "fws_boundaries";
+        }
         boundary = fwsBoundary;
         boundaryColumn = "orgname";
         layer = "gdd:fws_boundaries"
@@ -87,12 +97,17 @@ function areaStats(req, res) {
     let plant = req.swagger.params['plant'].value;
     let climate = req.swagger.params['climate'].value;
     let useCache = req.swagger.params['useCache'].value;
+    let useBufferedBoundary = req.swagger.params['useBufferedBoundary'].value;
 
     let boundaryTable = "";
     let boundary = "";
     let boundaryColumn = "";
     if(fwsBoundary) {
-        boundaryTable = "fws_boundaries";
+        if(useBufferedBoundary) {
+            boundaryTable = "fws_boundaries_buff30km";
+        } else {
+            boundaryTable = "fws_boundaries";
+        }
         boundary = fwsBoundary;
         boundaryColumn = "orgname";
     } else if(stateBoundary) {
@@ -123,12 +138,17 @@ async function areaStatsTimeSeries(req, res) {
     let plant = req.swagger.params['plant'].value;
     let climate = req.swagger.params['climate'].value;
     let useCache = req.swagger.params['useCache'].value;
+    let useBufferedBoundary = req.swagger.params['useBufferedBoundary'].value;
 
     let boundaryTable = "";
     let boundary = "";
     let boundaryColumn = "";
     if(fwsBoundary) {
-        boundaryTable = "fws_boundaries";
+        if(useBufferedBoundary) {
+            boundaryTable = "fws_boundaries_buff30km";
+        } else {
+            boundaryTable = "fws_boundaries";
+        }
         boundary = fwsBoundary;
         boundaryColumn = "orgname";
     } else if(stateBoundary) {
